--- a/package.json
+++ b/package.json
@@ -5,33 +5,33 @@
   "description": "A Sails application",
   "keywords": [],
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/http":  "2.0.0-rc.1",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
+    "@angular/http":  "~2.4.0",
     "bower": "^1.7.9",
     "db-migrate": "^0.10.0-beta.11",
     "db-migrate-mysql": "^1.1.6",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "^4.0.5",
     "es6-shim": "^0.35.0",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-jst": "0.6.0",
+    "grunt": "1.0.1",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-coffee": "1.0.0",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "1.0.1",
+    "grunt-contrib-jst": "1.0.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-contrib-watch": "0.5.3",
+    "grunt-contrib-uglify": "1.0.1",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.2.4",
-    "grunt-ts": "^5.5.0-beta.2",
-    "include-all": "~0.1.6",
+    "grunt-sync": "0.5.2",
+    "grunt-ts": "^5.5.1",
+    "include-all": "^1.0.0",
     "install": "^0.7.3",
     "istanbul": "^0.4.3",
     "marked": "^0.3.5",
@@ -40,15 +40,15 @@
     "npm": "^3.8.9",
     "rc": "1.0.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "sails": "~0.12.1",
+    "rxjs": "5.0.1",
+    "sails": "~0.12.11",
     "sails-db-migrate": "^1.3.1",
     "sails-disk": "~0.10.9",
     "sails-hook-autoreload": "^0.13.1",
     "sails-mysql": "^0.12.1",
-    "systemjs": "0.19.26",
+    "systemjs": "~0.20.2",
     "url-seo-scrubber": "0.0.2",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.7.2"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -64,21 +64,17 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "ssh://git@vcs.rockfishinteractive.com:7999/rfint/rockfish-client-org-chart.git"
+    "url": ""
   },
   "author": "ryan.parsley",
   "license": "",
   "devDependencies": {
-    "angular-cli": "0.0.*",
     "clang-format": "^1.0.35",
     "codelyzer": "0.0.14",
-    "ember-cli-inject-live-reload": "^1.4.0",
     "grunt-mocha": "^1.0.2",
     "grunt-mocha-istanbul": "^4.0.2",
     "grunt-mocha-test": "^0.12.7",
     "grunt-simple-mocha": "^0.4.1",
-    "grunt-tsc": "^1.0.12",
-    "grunt-typescript": "^0.8.0",
     "jade": "^1.11.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
@@ -87,9 +83,9 @@
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.3.0",
     "supertest": "^1.2.0",
-    "ts-node": "^0.5.5",
-    "tslint": "^3.6.0",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1"
+    "tslint": "^3.15.1",
+    "typings": "^0.8.1",
+    "@types/node": "^6.0.46",
+    "@types/jasmine": "^2.5.36"
   }
 }
