--- a/package.json
+++ b/package.json
@@ -5,50 +5,58 @@
   "description": "A Sails application",
   "keywords": [],
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
-    "@angular/http":  "~2.4.0",
-    "bower": "^1.7.9",
-    "db-migrate": "^0.10.0-beta.11",
-    "db-migrate-mysql": "^1.1.6",
+    "@angular/common": "^2.4.8",
+    "@angular/compiler": "^2.4.8",
+    "@angular/core": "^2.4.8",
+    "@angular/forms": "^2.4.8",
+    "@angular/http": "^2.4.8",
+    "@angular/platform-browser": "^2.4.8",
+    "@angular/platform-browser-dynamic": "^2.4.8",
+    "@angular/router": "^3.4.8",
+    "@types/jasmine": "^2.5.43",
+    "bower": "^1.8.0",
+    "clang-format": "^1.0.48",
+    "db-migrate": "^0.10.0-beta.20",
+    "db-migrate-mysql": "^1.1.10",
     "es6-promise": "^4.0.5",
-    "es6-shim": "^0.35.0",
+    "es6-shim": "^0.35.3",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
+    "grunt-contrib-cssmin": "1.0.2",
     "grunt-contrib-jst": "1.0.0",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-uglify": "1.0.1",
+    "grunt-contrib-uglify": "2.0.0",
     "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
-    "grunt-ts": "^5.5.1",
-    "include-all": "^1.0.0",
-    "install": "^0.7.3",
-    "istanbul": "^0.4.3",
-    "marked": "^0.3.5",
-    "mocha": "^2.4.5",
-    "moment": "^2.12.0",
-    "npm": "^3.8.9",
-    "rc": "1.0.1",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.1",
+    "grunt-mocha": "^1.0.4",
+    "grunt-sails-linker": "~1.0.4",
+    "grunt-sync": "0.6.2",
+    "grunt-ts": "6.0.0-beta.11",
+    "include-all": "^3.0.1",
+    "install": "^0.8.7",
+    "istanbul": "^0.4.5",
+    "karma": "^1.5.0",
+    "marked": "^0.3.6",
+    "mocha": "^3.2.0",
+    "moment": "^2.17.1",
+    "npm": "^4.4.0",
+    "protractor": "^5.1.1",
+    "rc": "1.1.6",
+    "reflect-metadata": "0.1.9",
+    "rxjs": "5.1.0",
     "sails": "~0.12.11",
-    "sails-db-migrate": "^1.3.1",
-    "sails-disk": "~0.10.9",
-    "sails-hook-autoreload": "^0.13.1",
+    "sails-db-migrate": "^1.5.0",
+    "sails-disk": "~0.10.10",
+    "sails-hook-autoreload": "^0.13.2",
     "sails-mysql": "^0.12.1",
-    "systemjs": "~0.20.2",
+    "systemjs": "^0.20.9",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
     "url-seo-scrubber": "0.0.2",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.7"
   },
   "scripts": {
     "debug": "node debug app.js",
@@ -69,23 +77,23 @@
   "author": "ryan.parsley",
   "license": "",
   "devDependencies": {
-    "clang-format": "^1.0.35",
-    "codelyzer": "0.0.14",
-    "grunt-mocha": "^1.0.2",
-    "grunt-mocha-istanbul": "^4.0.2",
-    "grunt-mocha-test": "^0.12.7",
+    "@angular/cli": "^1.0.0-rc.0",
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^7.0.5",
+    "clang-format": "^1.0.46",
+    "codelyzer": "2.0.0-beta.4",
+    "grunt-mocha": "^1.0.4",
+    "grunt-mocha-istanbul": "^5.0.2",
+    "grunt-mocha-test": "^0.13.2",
     "grunt-simple-mocha": "^0.4.1",
-    "jade": "^1.11.0",
-    "jasmine-core": "^2.4.1",
-    "jasmine-spec-reporter": "^2.4.0",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
-    "protractor": "^3.3.0",
-    "supertest": "^1.2.0",
-    "tslint": "^3.15.1",
-    "typings": "^0.8.1",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "^2.5.36"
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "protractor": "^5.1.0",
+    "supertest": "^3.0.0",
+    "tslint": "^4.4.2",
+    "typings": "^2.1.0"
   }
 }
