--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "protractor": "^5.1.0",
+    "pug": "^2.0.0-beta11",
+    "pug-html-loader": "^1.1.1",
     "supertest": "^3.0.0",
     "tslint": "^4.4.2",
     "typings": "^2.1.0",
